<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/imageView_icon"
        android:src="@drawable/default_img"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editPlanName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/column_required_planName" />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="110dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editStartDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:hint="@string/column_required_startDay"
                    android:inputType="time" />

            </android.support.design.widget.TextInputLayout>
            <ImageButton
                android:id="@+id/bottom_DatePicker_startDay"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                app:srcCompat="@drawable/ic_calendar_black_24dp"
                android:onClick="showDatePickerDialog"
                />
            <TextView
                android:id="@+id/textPeriod"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/period"
                android:textSize="14dp"/>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="110dp"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editEndDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:hint="@string/column_required_endDay"
                    android:inputType="time" />

            </android.support.design.widget.TextInputLayout>
            <ImageButton
                android:id="@+id/bottom_DatePicker_endDay"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                app:srcCompat="@drawable/ic_calendar_black_24dp"
                android:onClick="showDatePickerDialog"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="right"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="80dp"
                        android:padding="10dp"
                        android:layout_height="60sp"
                        android:autoSizeTextType="uniform"
                        app:autoSizeMinTextSize="12sp"
                        android:text="@string/column_person"/>

                    <Spinner
                        android:id="@+id/PersonNumber"
                        android:singleLine="true"
                        android:textSize="40sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawSelectorOnTop="true"
                        android:spinnerMode="dialog"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="50dp"
                        android:layout_height="40sp"
                        android:autoSizeTextType="uniform"
                        app:autoSizeMinTextSize="12sp"
                        android:text="@string/column_person_unit" />

                </LinearLayout>

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editMemo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/column_memo" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


</LinearLayout>