<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true">
        <!--        android:layout_marginBottom=""
            android:layout_marginLeft=""
            android:layout_marginRight=""
            android:layout_marginTop="" -->

        <LinearLayout
            android:id="@+id/cardLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_icon"
                android:src="@drawable/icon_showtabi"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_planName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/colorBlack" />
                <!--                 android:layout_marginLeft=""
    android:layout_marginRight="" -->
                <!-- android:textSize="" -->


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >

                    <TextView
                        android:id="@+id/textView_startYMD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:textColor="@color/colorBlack" />
                    <!--             android:paddingBottom=""
    android:paddingTop=""-->
                    <!-- android:textSize="" -->

                    <TextView
                        android:id="@+id/textView_period"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/period"
                        android:textColor="@color/colorBlack" />
                    <!--             android:textSize=""-->

                    <TextView
                        android:id="@+id/textView_endYMD"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:textColor="@color/colorBlack" />
                </LinearLayout>
                <!--             android:textSize="" -->

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
